# bids-fmriprep

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gear_environ.json  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.sh
docs/: release_notes.md
notebooks/: gather-fMRIPrep-Resources.ipynb  rerun-fmriprep.py  run-bids-fmriprep.ipynb
tests/: Dockerfile  conftest.py
tests/integration_tests/: test_bids_error_reports.py  test_dry_run.py  test_fake_data_timeout.py  test_fs-subjects-dir.py  test_log_to_file.py  test_wet_run_errors.py
tests/platform_tests/: project_BIDS_multi_session_bids-filter-file_fails.py  project_BIDS_multi_session_previous-results_works.py  project_BIDS_multi_session_work-dir_succeeds.py
tests/unit_tests/: test_download_run_level.py  test_environment.py  test_fs_subj.py  test_generate_command.py  test_run_level.py  test_set_performance_config.py  test_tree.py  test_zip.py
utils/: args.py  bids.py  dry_run.py  freesurfer.py  log.py  results.py  singularity.py
utils/bids/: download_bids.py  download_run_level.py  run_level.py  tree.py  tree_bids.py  validate.py  validate_bids.py
utils/dicom/: import_dicom_header_as_dict.py
utils/fly/: __init__.py  custom_log.py  environment.py  get_root_client.py  get_session_from_analysis_id.py  get_session_uids.py  load_manifest_json.py  make_file_name_safe.py  make_session_directory.py  set_performance_config.py  set_session_label.py
utils/helpers/: exists.py  extract_return_paths.py  set_environment.py
utils/licenses/: freesurfer.py
(+6 files in other folders)
