[tool.poetry]
name = "bids-fmriprep"
version = "1.4.0_20.2.7"
description = ""
authors = ["Flywheel <support@flywheel.io>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "~3.7.1"
flywheel-sdk = "~15.1.0"
psutil = "~5.6.3"
flywheel-gear-toolkit = "~0.1.3"
flywheel-bids = "~0.9.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
