[tool.poetry]
name = "bids-fmriprep"
version = "1.5.0+22.0.2"
description = ""
authors = ["Iraj Gholami <Iraj.Gholami@nyu.edu>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "~3.9.12"
flywheel-sdk = "~16.12.3"
psutil = "~5.9.2"
flywheel-gear-toolkit = "~0.6.8"
flywheel-bids = "~0.9.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
